--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           args: "-tpng ${{ github.workspace }}/plantuml-e2e-action/test_diagram.puml"
       - name: Display diagram
-        run: cat test_diagram.png
+        run: cat ${{ github.workspace }}/plantuml-e2e-action/test_diagram.png
